--- a/SportsStore/SportsStore.Tests/packages.config
+++ b/SportsStore/SportsStore.Tests/packages.config
@@ -2,12 +2,16 @@
 <packages>
   <package id="Castle.Core" version="5.1.1" targetFramework="net481" />
   <package id="Microsoft.ApplicationInsights" version="2.22.0" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net481" />
+  <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net481" />
+  <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net481" />
   <package id="Microsoft.Testing.Extensions.Telemetry" version="1.3.2" targetFramework="net481" />
   <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.3.2" targetFramework="net481" />
   <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.3.2" targetFramework="net481" />
   <package id="Microsoft.Testing.Platform" version="1.3.2" targetFramework="net481" />
   <package id="Microsoft.Testing.Platform.MSBuild" version="1.3.2" targetFramework="net481" />
   <package id="Microsoft.TestPlatform.ObjectModel" version="17.11.0" targetFramework="net481" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net481" />
   <package id="Moq" version="4.20.71" targetFramework="net481" />
   <package id="MSTest.TestAdapter" version="3.5.2" targetFramework="net481" />
   <package id="MSTest.TestFramework" version="3.5.2" targetFramework="net481" />
