--- a/VillaAgencyGlobal/VillaAG.Main/VillaAG.Main.csproj
+++ b/VillaAgencyGlobal/VillaAG.Main/VillaAG.Main.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\ActionResults.cs" />
     <Compile Include="Models\InformationBanner.cs" />
     <Compile Include="Models\VM_Detail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -173,6 +174,8 @@
     <Content Include="Content\webfonts\fa-solid-900.woff2" />
     <Content Include="Content\webfonts\fa-v4compatibility.ttf" />
     <Content Include="Content\webfonts\fa-v4compatibility.woff2" />
+    <Content Include="Content\Assets\ReportOne.pdf" />
+    <Content Include="Content\Assets\ReportTwo.pdf" />
     <None Include="Dockerfile" />
     <None Include=".dockerignore">
       <DependentUpon>Dockerfile</DependentUpon>
