--- a/SportsStore/SportsStore.Domain/SportsStore.Domain.csproj
+++ b/SportsStore/SportsStore.Domain/SportsStore.Domain.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Concrete\EFDbContext.cs" />
     <Compile Include="Concrete\EFProductRepository.cs" />
     <Compile Include="Concrete\EmailOrderProcessor.cs" />
+    <Compile Include="Entities\ActionLog.cs" />
     <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ShippingDetails.cs" />
