--- a/AdventureWorks/AdventureWorks.Infrastructure/AdventureWorks.Infrastructure.csproj
+++ b/AdventureWorks/AdventureWorks.Infrastructure/AdventureWorks.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
+    <Folder Include="Interfaces\" />
     <Folder Include="DataStore\" />
     <Folder Include="Repository\" />
   </ItemGroup>
