--- a/DemoExercises/DEP.ExampleProject.API/packages.config
+++ b/DemoExercises/DEP.ExampleProject.API/packages.config
@@ -12,9 +12,12 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net481" />
   <package id="Newtonsoft.Json.Bson" version="1.0.3" targetFramework="net481" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net481" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net481" />
   <package id="System.Memory" version="4.6.0" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net481" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net481" />
 </packages>
