--- a/DemoExercises/DEP.ServiceApplication/Web.config
+++ b/DemoExercises/DEP.ServiceApplication/Web.config
@@ -6,16 +6,16 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
-    <httpRuntime targetFramework="4.8.1"/>
+    <httpRuntime targetFramework="4.8.1" />
   </system.web>
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -25,12 +25,12 @@
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true" />
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="true" />
   </system.webServer>
 
-</configuration>
+<connectionStrings><add name="DEPEntities" connectionString="metadata=res://*/PatientInfo.csdl|res://*/PatientInfo.ssdl|res://*/PatientInfo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JeanPC\DEVSERVER;initial catalog=DEP;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
