--- a/DemoExercises/DEP.MinimalService/Web.config
+++ b/DemoExercises/DEP.MinimalService/Web.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation debug="false" targetFramework="4.8.1" />
+    <compilation debug="true" targetFramework="4.8.1"/>
     <httpRuntime targetFramework="4.8.1"/>
   </system.web>
   <system.serviceModel>
@@ -20,9 +19,9 @@
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpsBinding" scheme="https"/>
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -32,5 +31,4 @@
       -->
     <directoryBrowse enabled="true"/>
   </system.webServer>
-
 </configuration>
